# wedding-web

./: .env.example  .gitignore  README.md  lighthouserc.cjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/api/: .dockerignore  .env.example  Dockerfile  pyproject.toml
apps/api/analytics/: admin.py  models.py  serializers.py  urls.py  views.py
apps/api/catalog/: admin.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/api/common/: admin.py  api.py  api_urls.py  apps.py  checks.py  deployment.py  exceptions.py  health.py  health_urls.py  logging.py  mfa.py  middleware.py  models.py  notifications.py  pagination.py  permissions.py  serializers.py  signals.py  tasks.py  throttles.py  validators.py  views.py
apps/api/config/: celery.py  gunicorn.conf.py  release.py  urls.py
apps/api/invitations/: __init__.py  admin.py  bespoke.py  bespoke_views.py  capabilities.py  models.py  preview.py  selectors.py  serializers.py  urls.py  views.py
apps/api/leads/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/api/media_library/: __init__.py  admin.py  models.py  services.py  urls.py  views.py
apps/api/orders/: admin.py  lifecycle.py  models.py  permissions.py  serializers.py  urls.py  views.py
apps/api/payments/: admin.py  models.py  serializers.py  services.py  urls.py  views.py
apps/api/site_settings/: __init__.py  admin.py  models.py  urls.py  views.py
apps/api/tests/: factories.py  test_bespoke_workflow.py  test_deployment.py  test_health.py  test_phase8_12_operations.py  (+6 more)
(+219 files in other folders)
