[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "wedding-api"
version = "0.1.0"
description = "Backend API for the Wedding Invitation Studio"
requires-python = ">=3.12,<3.15"
dependencies = [
  "celery[redis]>=5.5,<6",
  "cloudinary>=1.44,<2",
  "dj-database-url>=3,<4",
  "django>=5.2,<6.1",
  "django-cors-headers>=4.7,<5",
  "django-csp>=4,<5",
  "django-axes>=7.1,<8",
  "django-otp>=1.6,<2",
  "django-redis>=6,<7",
  "djangorestframework>=3.16,<4",
  "drf-spectacular>=0.28,<1",
  "gunicorn>=23,<24",
  "psycopg[binary]>=3.2,<4",
  "qrcode[pil]>=8,<9",
  "sentry-sdk[django]>=2.33,<3",
  "whitenoise>=6.9,<7",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.17,<2",
  "pytest>=8.4,<9",
  "pytest-django>=4.11,<5",
  "ruff>=0.12,<1",
]

[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "DJ", "UP"]
ignore = ["DJ001"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
